--- a/package.json
+++ b/package.json
@@ -1,54 +1,43 @@
 {
-  "name": "terifash-visit-card",
+  "name": "wp-boilerplate",
   "version": "1.0.0",
-  "description": "My site visit card terifash.pro",
-  "main": "index.js",
+  "description": "",
+  "main": "gulpfile.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack -d",
-    "dev-w": "cross-env NODE_ENV=development webpack -d --watch",
-    "dev-s": "node_modules/.bin/webpack-dev-server -d",
-    "prod": "cross-env NODE_ENV=production webpack -p",
-    "prod-w": "cross-env NODE_ENV=production webpack -p --watch",
-    "prod-s": "node_modules/.bin/webpack-dev-server -p",
-    "start": "webpack-dev-server --mode development"
+    "test": "dev",
+    "dev": "npm gulp",
+    "watch": "npm gulp:watch"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://TeriFash@bitbucket.org/TeriFash/wp-boilerplate.git"
+  },
+  "author": "Teri Fash",
+  "license": "ISC",
+  "homepage": "https://bitbucket.org/TeriFash/wp-boilerplate#readme",
   "keywords": [
     "boilerplate",
-    "html5",
+    "wordpress",
+    "starter-kit",
     "sass",
-    "pug"
+    "gulp",
+    "npm"
   ],
-  "author": "Teri Fash",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.1.0",
-    "exports-loader": "^0.7.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "favicons-webpack-plugin": "0.0.9",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.3.1",
-    "node-sass": "^4.9.2",
-    "pug": "^2.0.3",
-    "pug-loader": "^2.4.0",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dashboard": "^3.2.0",
-    "webpack-dev-server": "^3.1.4"
-  },
   "dependencies": {
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.3",
-    "tether": "^1.4.4",
-    "uikit": "^3.3.0"
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-cache": "^1.1.2",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-rimraf": "^0.2.2",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-rigger": "^0.5.8",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
+    "gulp-rename": "^1.4.0",
+    "imagemin-jpeg-recompress": "^6.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "font-awesome": "^4.7.0"
   }
 }
